@startumlclassDiagram
             class TachyonPhysics~SimulationState~ {
                 <<interface>>
                 +enterAtSource(String firstRow) SimulationState
                 +propagateThrough(SimulationState state, String row) SimulationState
             }

             class TachyonManifold {
                 -List~String~ diagram
                 -TachyonManifold(List~String~ diagram)
                 +fromDiagram(List~String~ diagram)$ TachyonManifold
                 +simulate(TachyonPhysics~SimulationState~ physics) SimulationState
             }

             class QuantumTachyonPhysics {
                 +enterAtSource(String firstRow) QuantumState
                 +propagateThrough(QuantumState state, String row) QuantumState
                 -applyQuantumSplit(Entry~Integer,Long~ entry, String row) Stream~Entry~
                 -hitSplitter(String row, int pos) boolean
                 -isWithinManifold(String row, int pos) boolean
             }

             class QuantumState {
                 <<record>>
                 +Map~Integer, Long~ timelines
                 +totalActiveTimelines() long
             }

             QuantumTachyonPhysics ..|> TachyonPhysics : Implements
             TachyonManifold ..> TachyonPhysics : Simulates (Strategy Injection)
             QuantumTachyonPhysics ..> QuantumState : Instantiates

@enduml